update of books

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button class="mr-4" routerLink="/">
     <mat-icon>home</mat-icon>
   </button>
-  <span>CRUD App</span>
+  <span>Library App</span>
   <span class="example-spacer"></span>
  
 </mat-toolbar>
