--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,7 +1,7 @@
 @if(bookList && bookList.length>0){
 
    <div class="mat-elevation-z8 w-full">
-    <div class="flex justify-end p-8"><button routerLink="create-book" mat-raised-button color="primary">Kitap Ekle</button></div>
+    <div class="flex justify-end p-8"><button routerLink="/create-book" mat-raised-button color="primary">Kitap Ekle</button></div>
     <table mat-table [dataSource]="bookList">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Id</th>
@@ -22,6 +22,11 @@
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef> Status </th>
           <td mat-cell *matCellDef="let element">{{element.status}}</td>
+        </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-raised-button color="primary" (click)="edit(element.id)">Düzenle</button>
         </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
