--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -11,13 +11,13 @@
           <th mat-header-cell *matHeaderCellDef>ISBN</th>
           <td mat-cell *matCellDef="let element"> {{element.isbn}} </td>
         </ng-container>
-      <ng-container matColumnDef="numberOfPages">
-        <th mat-header-cell *matHeaderCellDef>Number Of Pages</th>
-        <td mat-cell *matCellDef="let element"> {{element.numberOfPages}} </td>
+      <ng-container matColumnDef="pages">
+        <th mat-header-cell *matHeaderCellDef>Sayfa Sayısı</th>
+        <td mat-cell *matCellDef="let element"> {{element.pages}} </td>
       </ng-container>
-      <ng-container matColumnDef="bookTitle">
-          <th mat-header-cell *matHeaderCellDef>Title</th>
-          <td mat-cell *matCellDef="let element">{{element.bookTitle}}</td>
+      <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Kitap Adı</th>
+          <td mat-cell *matCellDef="let element">{{element.name}}</td>
         </ng-container>
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef> Status </th>
@@ -26,7 +26,9 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let element">
-            <button mat-raised-button color="primary" (click)="edit(element.id)">Düzenle</button>
+            <button mat-raised-button color="primary" (click)="edit(element.id)" class="mr-4">Düzenle</button>
+            <button mat-raised-button color="warn" (click)="delete(element.id)">Sil</button>
+            </td>
         </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
