--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -27,6 +27,7 @@
           <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let element">
             <button mat-raised-button color="primary" (click)="edit(element.id)">Düzenle</button>
+            <button mat-raised-button color="warn" (click)="delete(element.id)">Sil</button>
         </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
