--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
-<mat-toolbar color="primary">
-  <button mat-icon-button class="mr-4" routerLink="/">
-    <mat-icon>home</mat-icon>
-  </button>
-  <span>Library App</span>
-  <span class="example-spacer"></span>
- 
-</mat-toolbar>
-<div class=" w-full px-36 py-8">
-  <router-outlet></router-outlet>
+<div id="container" [ngStyle]="{backgroundImage:'url('+ image +')'}">
+    <app-nav-bar></app-nav-bar>
+    <app-home-page-search></app-home-page-search>
 </div>
+<app-banner></app-banner>
+<br><br><br><br>
+<app-cards></app-cards>
+<app-footer></app-footer>
+
+    
+
+
+
+
