--- a/src/app/components/HomePage/cards/cards.component.html
+++ b/src/app/components/HomePage/cards/cards.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between px-40 mt-7 bg-slate-100">
+<div class="flex justify-around px-40 mt-7 bg-slate-100">
     <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
         <a href="#">
             <img class="rounded-t-lg" src="assets/images/book.jpg" alt="" />
