'component-routing-error'

--- a/src/app/components/HomePage/footer/footer.component.html
+++ b/src/app/components/HomePage/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="/" class="hover:underline">Tobeto Ekibi™</a>. Tüm Hakları Saklıdır.
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a routerLink="" routerLinkActive="router-link-active" ="/" class="hover:underline">Tobeto Ekibi™</a>. Tüm Hakları Saklıdır.
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">Hakkımızda</a>
+            <a routerLink="/" routerLinkActive="active" class="hover:underline me-4 md:me-6">Hakkımızda</a>
         </li>
         <li>
-            <a href="#" class="hover:underline me-4 md:me-6">İletişim</a>
+            <a routerLink="/" routerLinkActive="active" class="hover:underline me-4 md:me-6">İletişim</a>
         </li>
     </ul>
     </div>
