--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
-<div id="container" [ngStyle]="{backgroundImage:'url('+ image +')'}">
-    <app-nav-bar></app-nav-bar>
-    <app-home-page-search></app-home-page-search>
-</div>
-<app-banner></app-banner>
-<br><br><br><br>
-<app-cards></app-cards>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
 
     
 
