--- a/src/app/components/HomePage/cards/cards.component.html
+++ b/src/app/components/HomePage/cards/cards.component.html
@@ -1,14 +1,14 @@
 <div class="flex justify-around px-40 mt-7 bg-slate-100">
     <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-        <a href="#">
+        <a routerLink="/">
             <img class="rounded-t-lg" src="assets/images/book.jpg" alt="" />
         </a>
         <div class="p-5">
-            <a href="#">
+            <a routerLink="/">
                 <h1 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Kitap ödünç alın</h1>
             </a>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Geniş kitap yelpazesiyle Tobeto Kütüphanesinde istediğin kitabı bul, kolayca ödünç al.</p>
-            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <a routerLink="/" routerLinkActive="active" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                  Devamını oku
                  <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -21,11 +21,11 @@
             <img class="rounded-t-lg" src="assets/images/register.jpg" alt="" />
         </a>
         <div class="p-5">
-            <a href="#">
+            <a routerLink="/" routerLinkActive="active">
                 <h1 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Üyelik Formu</h1>
             </a>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Üyelik formuna buradan ulaşabilirsiniz.</p>
-            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <a routerLink="/" routerLinkActive="active" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 Devamını oku
                  <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
